--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,13 @@
 
 <%= render 'shared/search_form' %>
 
-<div id="search_results"></div>
+
+<div class="results">
+  <div class="wrap">
+    <div class="arr white"></div>
+    <div id="search_results"></div>
+  </div>
+</div>
 
 <div id="show_more">
   <span class="js-link">Show More...</span>
