--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -5,6 +5,7 @@
   margin-top: 20px;
   .checkbox {
     display: inline-block;
+    margin: 5px 0 0 10px;
   }
   .radio-btn {
     margin: 5px 0 15px 0;
