--- a/app/assets/stylesheets/tag_it.css
+++ b/app/assets/stylesheets/tag_it.css
@@ -74,8 +74,8 @@ ul.tagit {
     border-style: solid;
     border-width: 1px;
     border-color: #C6C6C6;
-    background: inherit;
-    width: 200px;
+    width: 320px;
+    max-height: 75px;
 }
 ul.tagit li.tagit-choice {
     -moz-border-radius: 6px;
