--- a/app/views/shared/_sign_up_in.html.erb
+++ b/app/views/shared/_sign_up_in.html.erb
@@ -1,15 +1,13 @@
 <div class="signup-methods" id="<%= action %>_block">
   You can sign in with your <%= link_to 'Facebook', user_omniauth_authorize_path(:facebook) %> or 
   <%= link_to 'Google', user_omniauth_authorize_path(:google_oauth2) %> accounts
-  <%= link_to(image_tag('/assets/fb_logo.jpg'), user_omniauth_authorize_path(:facebook)) %> &nbsp;
-  <%= link_to(image_tag('/assets/g_logo.png'), user_omniauth_authorize_path(:google_oauth2)) %>
   <div class="separator">or</div>
   <%= form_tag(path, remote: true, id: "#{action}_form") do %>
     <%=label_tag :email%>
-    <%= text_field_tag :email %><br />
+    <%= text_field_tag :email, nil, class: 'text-input' %><br />
     <%=label_tag :password%>
-    <%= password_field_tag :password %><br />
-    <%= submit_tag label, class: 'btn-large btn-primary' %>
+    <%= password_field_tag :password, nil, class: 'text-input' %><br />
+    <%= submit_tag label, class: 'btn btn-inverse' %>
     <%= image_tag 'ajax-loader.gif', class: 'loading' %>
   <% end %>
 </div>
