design integration: search & feedback forms

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -46,6 +46,8 @@ a {
 #feedback_form {
   position: absolute;
   display: none;
+  background-color: #CCC;
+  padding: 20px;
 }
 
 #sign_in_form, #sign_up_form {
