--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -23,7 +23,7 @@
       <%end%>
     </section>
     <section class="welcome pull-left">
-      <h1>Teachers</h1>
+      <h1 id="who_header">Teachers</h1>
     </section>
   </div>
   <div class="arr black"></div>
