--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -10,6 +10,7 @@
   .checkbox {
     display: inline-block;
     margin: 5px 0 0 10px;
+    width: 130px;
   }
   .radio-btn {
     margin: 5px 0 15px 0;
