--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,9 +4,8 @@
   <div class="wrap">
     <div class="arr white"></div>
     <div id="search_results"></div>
+    <div id="show_more">
+      <span class="more">Show More...</span>
+    </div>
   </div>
-</div>
-
-<div id="show_more">
-  <span class="js-link">Show More...</span>
 </div>
