--- a/app/views/search/_result_row.html.erb
+++ b/app/views/search/_result_row.html.erb
@@ -1,15 +1,9 @@
 <%person = user.send(@search.who)%>
-<div class="item">
-  <div class="contact pull-left"></div>
+<div class="item<%= cycle(" right", "")%>">
+  <%contacts_count = contacts_count(user, @search.who)%>
+  <div class="contact pull-left contact-send <%='gray-send' if contacts_count > 0 %>" data-send-to="<%= user.id %>" data-receive-as="<%= @search.who %>"></div>
+  <%= image_tag 'ajax-loader.gif', class: 'loading'%>
   <div class="title"><span>Name:</span> <%= user.name %></div>
   <div class="price"><span>Price ($):</span> <%= prices(person) %></div>
   <div class="tech"><span>Languages:</span> <%= langs(person) %></div>
-  <%= image_tag 'ajax-loader.gif', class: 'loading' %>
-  <span class="js-link red-link contact-send" data-send-to="<%= user.id %>" data-receive-as="<%= @search.who %>">
-    Share Your E-mail
-  </span>
-  <% contacts_count = contacts_count(user, @search.who)%>
-  <%if contacts_count > 0%>
-    (You shared your contacts with this <%=@search.who%> <%=pluralize(contacts_count, 'time')%>)
-  <%end%>
 </div>
