--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,8 @@
     </div>
   </header>
   
-  <div class="wrap">
-    <%= yield %>
-  </div>
-
+  <%= on_root_page? ? yield : content_tag(:div, yield, :class => "wrap") %>
+  
   <div class="clearfix"></div>
   <%= render partial: 'shared/feedback_form' %>
   
