--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,12 @@
   <header>
     <div class="wrap">
       <a href="/">
-      <h1 class="logo">TutorBear</h1>
+        <h1 class="logo">TutorBear</h1>
       </a>
       <div class="share pull-right">
         <%= render partial: 'shared/soc_btns' %>
       </div>
+      <div class="slogan">Learn Foreign Language or Become an Online Teacher</div>
     </div>
     <div class="top-bar">
       <div class="wrap">
