fixed slogan and language save in profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <div class="share pull-right">
         <%= render partial: 'shared/soc_btns' %>
       </div>
-      <div class="slogan">Learn Foreign Language or Become an Online Teacher</div>
+      <div class="slogan">Learn Foreign Languages or Become an Online Teacher</div>
     </div>
     <div class="top-bar">
       <div class="wrap">
