list without price checkbox

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -8,9 +8,11 @@
     max-height: 75px;
   }
   .checkbox {
-    display: inline-block;
-    margin: 5px 0 0 10px;
-    width: 130px;
+    margin: 0;
+    width: 230px;
+  }
+  .btn {
+    margin-top: 10px;
   }
   .radio-btn {
     margin: 5px 0 15px 0;
