--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -14,7 +14,7 @@
         <%= label_tag :price, 'Price ($ per hour):' %>
         <%= text_field_tag :price, nil, class: 'price-input', maxlength: 2 %>
         <label class="checkbox">
-          <%= check_box_tag :no_price_set, 1, true %>List <span id="who_no_price">teachers</span> who don't show price
+          <%= check_box_tag :no_price_set, 1, true %>Also show <span id="who_no_price">teachers</span> who don't give price
         </label>
         <%= hidden_field_tag :offset, 0 %>
         <%= hidden_field_tag :result_count, 0 %>
