user profiles, show email option, close button for feedback form
Conflicts:
	app/assets/stylesheets/profile.css.scss
	app/views/users/show.html.erb

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -47,7 +47,12 @@ a {
   position: absolute;
   display: none;
   background-color: #CCC;
+  border-radius: 15px;
   padding: 20px;
+  .close-btn {
+    cursor: pointer;
+    float: right;
+  }
 }
 
 #sign_in_form, #sign_up_form {
