--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,6 +6,10 @@
   <%= f.text_field :name %> <br />
   <div class="clear"></div>
 
+  <label class="checkbox">
+    <%= f.check_box :show_email %>Public your email (will be shown only for registered users)
+  </label>
+
   <div class="actions">
     <div>
       I want to:
