link to profile

--- a/app/views/search/_result_row.html.erb
+++ b/app/views/search/_result_row.html.erb
@@ -3,7 +3,7 @@
   <%contacts_count = contacts_count(user, @search.who)%>
   <div class="contact pull-left contact-send <%='gray-send' if contacts_count > 0 %>" data-send-to="<%= user.id %>" data-receive-as="<%= @search.who %>"></div>
   <%= image_tag 'ajax-loader.gif', class: 'loading'%>
-  <div class="title"><span>Name:</span> <%= user.name %></div>
+  <div class="title"><span>Name:</span> <%= link_to user.name, show_profile_path(user) %></div>
   <div class="price"><span>Price:</span> <%= prices(person) %></div>
   <div class="tech"><span>Languages:</span> <%= langs(person) %></div>
 </div>
