--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,6 +2,13 @@ a {
   text-decoration: underline;
 }
 
+.flags {
+  float: right;
+  img {
+    margin-right: 15px;
+  }
+}
+
 .signup-methods {
   display: none;
 }
