add multi lingual support for back end with globalize

--- a/app/views/contact_mailer/send_learner_contacts.html.erb
+++ b/app/views/contact_mailer/send_learner_contacts.html.erb
@@ -1,7 +1,7 @@
 Hello <%=@info[:to].name%>,<br /><br />
 
-one teacher is interested in teaching you.<br /> He shared his email with you: <%=@info[:from].email%><br />Please, contact him if you are still interested in learning those technologies that you mentioned in your profile on TutorBear
-
-
---
+one teacher is interested in teaching you.<br /> He shared his email with you: <%=@info[:from].email%><br />Please, contact him if you are still interested in learning the language or languages that you mentioned in your profile on TutorBear.
+<br />
+<br />
+--<br />
 TutorBear.net
