--- a/app/views/contact_mailer/send_teacher_contacts.html.erb
+++ b/app/views/contact_mailer/send_teacher_contacts.html.erb
@@ -1,7 +1,7 @@
 Hello <%=@info[:to].name%>,<br /><br />
 
-one learner wants you to be his teacher.<br /> He shared his email with you: <%=@info[:from].email%><br />Please, contact him if you are still interested in teaching those technologies that you mentioned in your profile on TutorBear.
-
-
---
+one learner wants you to be his teacher.<br /> He shared his email with you: <%=@info[:from].email%><br />Please, contact him if you are still interested in teaching the language or languages that you mentioned in your profile on TutorBear.
+<br />
+<br />
+--<br />
 TutorBear.net
