translate rails, models attributes, javascript

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <link rel="SHORTCUT ICON" href="/assets/favicon.ico" />
   <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css", media: "all" %>
   <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag I18n.locale, "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body data-lang="<%=I18n.locale%>">
