added russian language support in views and js

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,7 +5,7 @@
     <div class="arr white"></div>
     <div id="search_results"></div>
     <div id="show_more">
-      <span class="more">Show More...</span>
+      <span class="more"><%=I18n.t('show_more')%>...</span>
     </div>
   </div>
 </div>
