--- a/app/views/shared/_sign_up_in.html.erb
+++ b/app/views/shared/_sign_up_in.html.erb
@@ -1,11 +1,11 @@
 <div class="signup-methods" id="<%= action %>_block">
-  <%=text%> <%= link_to 'Facebook', user_omniauth_authorize_path(:facebook) %> or 
+  <%=text%> <%= link_to 'Facebook', user_omniauth_authorize_path(:facebook) %> <%=I18n.t('or')%> 
   <%= link_to 'Google', user_omniauth_authorize_path(:google_oauth2) %>
-  <div class="separator">or</div>
+  <div class="separator"><%=I18n.t('or')%></div>
   <%= form_tag(path, remote: true, id: "#{action}_form") do %>
     <%=label_tag :email%>
     <%= text_field_tag :email, nil, class: 'text-input' %><br />
-    <%=label_tag :password%>
+    <%=label_tag :password, I18n.t('password')%>
     <%= password_field_tag :password, nil, class: 'text-input' %><br />
     <%= submit_tag label, class: 'btn btn-inverse' %>
     <%= image_tag 'ajax-loader.gif', class: 'loading' %>
