--- a/app/views/shared/_user_navi.html.erb
+++ b/app/views/shared/_user_navi.html.erb
@@ -1,2 +1,2 @@
 <%= link_to current_user.name, edit_profile_path %> | 
-<%= link_to "Sign out", logout_path %>
+<%= link_to I18n.t('sign_out'), logout_path %>
