--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>TutorBear - Learn and Teach</title>
+  <title><%=page_title%></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel="SHORTCUT ICON" href="/assets/favicon.ico" />
   <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css", media: "all" %>
   <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag I18n.locale, "application" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body data-lang="<%=I18n.locale%>">
@@ -25,7 +25,7 @@
       <div class="share pull-right">
         <%= render partial: 'shared/soc_btns' %>
       </div>
-      <div class="slogan">Learn Foreign Languages or Become an Online Teacher</div>
+      <div class="slogan"><%=I18n.t('slogan')%></div>
     </div>
     <div class="top-bar">
       <div class="wrap">
@@ -52,7 +52,7 @@
     <div class="wrap">
       <div class="pull-left">&copy; <%=Date.today.year%> TutorBear.net</div>
       <ul class="links pull-right">
-        <li><span class="js-link gray-link" id="feedback_link">Send E-mail</span></li>
+        <li><span class="js-link gray-link" id="feedback_link"><%=I18n.t('send_email')%></span></li>
       </ul>
     </div>
   </footer>
