--- a/app/views/shared/_guest_navi.html.erb
+++ b/app/views/shared/_guest_navi.html.erb
@@ -1,3 +1,3 @@
-  You need to <span class="btn" id="sign_up_link">Create an account</span> or <span class="btn" id="sign_in_link">Sign in</span> to be able to Teach / Learn
-  <%= render partial: 'shared/sign_up_in', locals: {action: 'sign_up', path: register_path, label: 'Register', text: 'You  can join easily by clicking through'} %>
-  <%= render partial: 'shared/sign_up_in', locals: {action: 'sign_in', path: login_path, label: 'Login', text: 'You can sign in with your'} %>
+  <%=I18n.t('need')%> <span class="btn" id="sign_up_link"><%=I18n.t('sign_up')%></span> <%=I18n.t('or')%> <span class="btn" id="sign_in_link"><%=I18n.t('sign_in')%></span> <%=I18n.t('to_be_able')%>
+  <%= render partial: 'shared/sign_up_in', locals: {action: 'sign_up', path: register_path, label: I18n.t('sign_up_btn'), text: I18n.t('sign_up_text')} %>
+  <%= render partial: 'shared/sign_up_in', locals: {action: 'sign_in', path: login_path, label: I18n.t('sign_in_btn'), text: I18n.t('sign_in_text')} %>
