--- a/app/views/users/_teacher_info.html.erb
+++ b/app/views/users/_teacher_info.html.erb
@@ -1,10 +1,10 @@
 <div id="teacher_info">
-  <h3>Teacher</h3>
+  <h3><%=I18n.t('profile.teacher')%></h3>
   <%= f.fields_for :teacher do |teacher| %>
-    <%= teacher.label :min_price, 'Price Range ($ per hour)' %>
+    <%= teacher.label :min_price, I18n.t('profile.price') %>
     <%= teacher.text_field :min_price, class: 'span1', maxlength: 2 %> &nbsp; &ndash; &nbsp;  
     <%= teacher.text_field :max_price, class: 'span1', maxlength: 2 %> <br />
-    <%= label_tag :teacher_langs, 'Languages:' %>
+    <%= label_tag :teacher_langs, "#{I18n.t('languages')}:" %>
     <%= text_field_tag :teacher_langs, @langs[:teacher], class: 'span3' %> <br />
   <% end %>
 </div>
