--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,6 +2,18 @@ a {
   text-decoration: underline;
 }
 
+p {
+  color: #444;
+  font-size: 13px;
+  font-family: Verdana, sans-serif;
+  line-height: 160%;
+  overflow: hidden;
+}
+
+#header_nav {
+  margin-top: 20px;
+}
+
 .flags {
   float: right;
   img {
