fixed links and images in blog. recent posts on home page

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -57,9 +57,11 @@ p {
   text-transform:uppercase;
 }
 
-.right {
-  float: right;
-  margin-right: 100px;
+footer {
+  .right {
+    float: right;
+    margin-right: 100px;
+  }
 }
 
 #feedback_form {
