--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/header_menu' %>
+<%= render 'shared/nav/header_menu' %>
 <%= render 'shared/search_form' %>
 
 <div class="results">
