--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -32,15 +32,24 @@
     color: #ccc;
     float: right;
   }
+  .flags {
+    img {
+      margin-left: 10px;
+    }
+  }
 }
 
 #posts, #post {
-  img {
-    float: left;
-    padding: 10px 10px 0 0;
-  }
-  .right {
-    float: right;
-    padding: 10px 0 0 10px;
+  p {
+    img {
+      float: left;
+      margin: 5px 5px 0 0;
+      padding: 6px;
+      border: 1px solid #ccc;
+    }
+    .right {
+      float: right;
+      margin: 5px 0 0 5px;
+    }
   }
 }
