--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,7 @@
           <%= render 'shared/nav/guest_navi' %>
         <% end %>
         <div class="flags">
-          <% all_langs.each do |lang| %>
-            <%= link_to(image_tag("#{lang}.png"), url_for(locale: lang)) %>
-          <% end %>
+          <%=show_flags.html_safe%>
         </div>
       </div>
     </div>
