--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
 <div id="post">
-  <% all_langs.each do |lang| %>
-    <%= link_to(image_tag("#{lang}.png"), url_for(locale: lang)) %>
-  <% end %>
+  <span class="flags">
+    <%=show_flags.html_safe%>
+  </span>
 
   <h1><%=@post.title%></h1>
-  <p><%=sanitized_text(@post.text).html_safe%></p>
+  <p><%=sanitized_text(@post.text, @post.title).html_safe%></p>
   <div class="date"><%=@post.published_at.strftime('%d.%m.%Y')%></div>
 </div>
