--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -77,6 +77,7 @@ footer {
 
 .container {
   width:100%;
+  min-height: 480px;
   font-family:Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
   color:#1a1617;
 }
