--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,29 @@
+#comments {
+  margin-top: 35px;
+  .cmt {
+    padding: 20px 0 10px 20px;
+    .date {
+      font-size: 10px;
+      color: #666666;
+      margin-right: 10px;
+    }
+    .text {
+      font-size: 13px;
+      font-family: Arial, sans-serif;
+      line-height: 140%;
+    }
+  }
+  .reply-form {
+    display: none;
+  }
+  .cmt-reply {
+    font-size: 11px;
+    color: #6DA3BD;
+    cursor: pointer;
+    border-bottom: 1px dashed;
+  }
+}
+
 #recent_posts {
   li {
     line-height: 180%;
