--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,9 +1,9 @@
 <div id="comments">
-  <h2>Comments: </h2>
+  <h2><%=I18n.t('posts.comments.title')%>: </h2>
   <%=show_comments.html_safe%>
 
   <div class="cmt-add-block">
-    <span class="cmt-add">Leave a comment</span>
+    <span class="cmt-add"><%=I18n.t('posts.comments.write')%></span>
     <%= render partial: 'add_cmt', locals: {cmt: false}%>
     <%= render partial: 'cmt_sample', locals: {cmt_id: 0, level: 0}%>
   </div>
