full url for emails

--- a/app/views/notifier_mailer/new_comment.html.erb
+++ b/app/views/notifier_mailer/new_comment.html.erb
@@ -1,4 +1,4 @@
-New comment to an article: <%=link_to @post.title, post_path(id: @post, locale: 'en')%><br /><br />
+New comment to an article: <%=link_to @post.title, post_url(id: @post, locale: 'en')%><br /><br />
 
 Here is what it said: <br />
 <%=simple_format(@cmt_text)%>
